setup_output.txt
DROP DATABASE
CREATE DATABASE
-- USERS
CREATE TABLE Users (
    id INT NOT NULL PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    email VARCHAR(255) UNIQUE NOT NULL,
    password VARCHAR(255) NOT NULL,
    firstname VARCHAR(255) NOT NULL,
    lastname VARCHAR(255) NOT NULL,
    address TEXT,
    balance DECIMAL(12,2) DEFAULT 0
);
CREATE TABLE
-- CATEGORIES for products
CREATE TABLE Categories (
    id INT NOT NULL PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    name VARCHAR(100) UNIQUE NOT NULL
);
CREATE TABLE
-- PRODUCTS
CREATE TABLE Products (
    id INT NOT NULL PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    name VARCHAR(255) UNIQUE NOT NULL,
    description TEXT,
    image_url TEXT,
    price DECIMAL(12,2) NOT NULL,
    available BOOLEAN DEFAULT TRUE,
    category_id INT REFERENCES Categories(id)
);
CREATE TABLE
-- INVENTORY (per-seller per-product quantities/prices)
CREATE TABLE Inventory (
    seller_id INT NOT NULL REFERENCES Users(id),
    product_id INT NOT NULL REFERENCES Products(id),
    quantity INT NOT NULL DEFAULT 0,
    seller_price DECIMAL(12,2),
    PRIMARY KEY (seller_id, product_id)
);
CREATE TABLE
-- WISHLIST
CREATE TABLE Wishes (
    id INT NOT NULL PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    uid INT NOT NULL REFERENCES Users(id),
    pid INT NOT NULL REFERENCES Products(id),
    time_added TIMESTAMP WITHOUT TIME ZONE NOT NULL DEFAULT (CURRENT_TIMESTAMP AT TIME ZONE 'UTC')
);
CREATE TABLE
-- CART ITEMS (pending order: includes seller, user, product, quantity)
DROP TABLE IF EXISTS CartItems CASCADE;
psql:create.sql:47: NOTICE:  table "cartitems" does not exist, skipping
DROP TABLE
CREATE TABLE CartItems (
    id INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    uid INT NOT NULL REFERENCES Users(id),
    pid INT NOT NULL REFERENCES Products(id),
    seller_id INT NOT NULL REFERENCES Users(id),
    quantity INT NOT NULL DEFAULT 1,
    time_added TIMESTAMP WITHOUT TIME ZONE DEFAULT (CURRENT_TIMESTAMP AT TIME ZONE 'UTC'),
    UNIQUE (uid, pid, seller_id)
);
CREATE TABLE
-- ORDERS (each checkout creates an order)
CREATE TABLE Orders (
    id INT NOT NULL PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    user_id INT NOT NULL REFERENCES Users(id),
    total_amount DECIMAL(12,2) NOT NULL,
    order_date TIMESTAMP WITHOUT TIME ZONE NOT NULL DEFAULT (CURRENT_TIMESTAMP AT TIME ZONE 'UTC'),
    status VARCHAR(50) DEFAULT 'pending'
);
CREATE TABLE
-- ORDER ITEMS (order details, with seller and fulfillment details for each line)
CREATE TABLE OrderItems (
    id INT NOT NULL PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    order_id INT NOT NULL REFERENCES Orders(id),
    product_id INT NOT NULL REFERENCES Products(id),
    seller_id INT NOT NULL REFERENCES Users(id),
    quantity INT NOT NULL,
    price DECIMAL(12,2) NOT NULL,
    fulfillment_status VARCHAR(50) DEFAULT 'pending',
    fulfilled_date TIMESTAMP WITHOUT TIME ZONE
);
CREATE TABLE
-- PURCHASES HISTORY (for reference, not strictly needed with Orders/OrderItems)
CREATE TABLE Purchases (
    id INT NOT NULL PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    uid INT NOT NULL REFERENCES Users(id),
    pid INT NOT NULL REFERENCES Products(id),
    time_purchased TIMESTAMP WITHOUT TIME ZONE NOT NULL DEFAULT (CURRENT_TIMESTAMP AT TIME ZONE 'UTC')
);
CREATE TABLE
-- REVIEWS (per product, per user)
CREATE TABLE Reviews (
    review_id INT NOT NULL PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    product_id INT NOT NULL REFERENCES Products(id),
    user_id INT NOT NULL REFERENCES Users(id),
    rating INT NOT NULL,
    comment VARCHAR(255) NOT NULL,
    date_reviewed TIMESTAMP WITHOUT TIME ZONE NOT NULL DEFAULT (CURRENT_TIMESTAMP AT TIME ZONE 'UTC')
);
CREATE TABLE
-- Optionally: TABLE for seller reviews (advanced feature)
-- CREATE TABLE SellerReviews (
--     review_id INT NOT NULL PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
--     seller_id INT NOT NULL REFERENCES Users(id),
--     user_id INT NOT NULL REFERENCES Users(id),
--     rating INT NOT NULL,
--     comment VARCHAR(255) NOT NULL,
--     date_reviewed TIMESTAMP WITHOUT TIME ZONE NOT NULL DEFAULT (CURRENT_TIMESTAMP AT TIME ZONE 'UTC')
-- );
\COPY Users(id, email, password, firstname, lastname, address, 
psql:/Users/tingtingli/Desktop/School/Duke/ThirdYear/CS316/Amazon/mini-amazon-skeleton-jat-azon/db/load.sql:1: error: \copy: parse error at end of line
balance) FROM 'Users.csv' DELIMITER ',' CSV HEADER ;
psql:/Users/tingtingli/Desktop/School/Duke/ThirdYear/CS316/Amazon/mini-amazon-skeleton-jat-azon/db/load.sql:2: ERROR:  syntax error at or near "balance"
LINE 1: balance) FROM 'Users.csv' DELIMITER ',' CSV HEADER ;
        ^
\COPY Categories(id, name) FROM 'Categories.csv' DELIMITER ',' CSV 
COPY 10
HEADER;
psql:/Users/tingtingli/Desktop/School/Duke/ThirdYear/CS316/Amazon/mini-amazon-skeleton-jat-azon/db/load.sql:4: ERROR:  syntax error at or near "HEADER"
LINE 1: HEADER;
        ^
\COPY Products(id, name, description, image_url, price, available, 
psql:/Users/tingtingli/Desktop/School/Duke/ThirdYear/CS316/Amazon/mini-amazon-skeleton-jat-azon/db/load.sql:5: error: \copy: parse error at end of line
category_id) FROM 'Products.csv' DELIMITER ',' CSV HEADER ;
psql:/Users/tingtingli/Desktop/School/Duke/ThirdYear/CS316/Amazon/mini-amazon-skeleton-jat-azon/db/load.sql:6: ERROR:  syntax error at or near "category_id"
LINE 1: category_id) FROM 'Products.csv' DELIMITER ',' CSV HEADER ;
        ^
\COPY Inventory(seller_id, product_id, quantity, seller_price) FROM 
psql:/Users/tingtingli/Desktop/School/Duke/ThirdYear/CS316/Amazon/mini-amazon-skeleton-jat-azon/db/load.sql:7: error: \copy: parse error at end of line
'Inventory.csv' DELIMITER ',' CSV HEADER;
psql:/Users/tingtingli/Desktop/School/Duke/ThirdYear/CS316/Amazon/mini-amazon-skeleton-jat-azon/db/load.sql:8: ERROR:  syntax error at or near "'Inventory.csv'"
LINE 1: 'Inventory.csv' DELIMITER ',' CSV HEADER;
        ^
\COPY CartItems(id, uid, pid, seller_id, quantity, time_added) FROM 
psql:/Users/tingtingli/Desktop/School/Duke/ThirdYear/CS316/Amazon/mini-amazon-skeleton-jat-azon/db/load.sql:9: error: \copy: parse error at end of line
'CartItems.csv' DELIMITER ',' CSV HEADER;
psql:/Users/tingtingli/Desktop/School/Duke/ThirdYear/CS316/Amazon/mini-amazon-skeleton-jat-azon/db/load.sql:10: ERROR:  syntax error at or near "'CartItems.csv'"
LINE 1: 'CartItems.csv' DELIMITER ',' CSV HEADER;
        ^
\COPY Orders(id, user_id, total_amount, order_date, status) FROM 
psql:/Users/tingtingli/Desktop/School/Duke/ThirdYear/CS316/Amazon/mini-amazon-skeleton-jat-azon/db/load.sql:11: error: \copy: parse error at end of line
'Orders.csv' DELIMITER ',' CSV HEADER;
psql:/Users/tingtingli/Desktop/School/Duke/ThirdYear/CS316/Amazon/mini-amazon-skeleton-jat-azon/db/load.sql:12: ERROR:  syntax error at or near "'Orders.csv'"
LINE 1: 'Orders.csv' DELIMITER ',' CSV HEADER;
        ^
\COPY OrderItems(id, order_id, product_id, seller_id, quantity, price, 
psql:/Users/tingtingli/Desktop/School/Duke/ThirdYear/CS316/Amazon/mini-amazon-skeleton-jat-azon/db/load.sql:13: error: \copy: parse error at end of line
fulfillment_status, fulfilled_date) FROM 'OrderItems.csv' DELIMITER ',' 
CSV HEADER;
psql:/Users/tingtingli/Desktop/School/Duke/ThirdYear/CS316/Amazon/mini-amazon-skeleton-jat-azon/db/load.sql:15: ERROR:  syntax error at or near "fulfillment_status"
LINE 1: fulfillment_status, fulfilled_date) FROM 'OrderItems.csv' DE...
        ^
\COPY Wishes(id, uid, pid, time_added) FROM 'Wishes.csv' DELIMITER ',' 
psql:/Users/tingtingli/Desktop/School/Duke/ThirdYear/CS316/Amazon/mini-amazon-skeleton-jat-azon/db/load.sql:16: ERROR:  invalid input syntax for type integer: ""0""
CONTEXT:  COPY wishes, line 1, column id: ""0""
CSV HEADER;
psql:/Users/tingtingli/Desktop/School/Duke/ThirdYear/CS316/Amazon/mini-amazon-skeleton-jat-azon/db/load.sql:17: ERROR:  syntax error at or near "CSV"
LINE 1: CSV HEADER;
        ^
\COPY Reviews(review_id, product_id, user_id, rating, comment, 
psql:/Users/tingtingli/Desktop/School/Duke/ThirdYear/CS316/Amazon/mini-amazon-skeleton-jat-azon/db/load.sql:18: error: \copy: parse error at end of line
date_reviewed) FROM 'Reviews.csv' DELIMITER ',' CSV HEADER;
psql:/Users/tingtingli/Desktop/School/Duke/ThirdYear/CS316/Amazon/mini-amazon-skeleton-jat-azon/db/load.sql:19: ERROR:  syntax error at or near "date_reviewed"
LINE 1: date_reviewed) FROM 'Reviews.csv' DELIMITER ',' CSV HEADER;
        ^
                         
